fix: broken image paths in FR Heritage and Collections

--- a/src/components/fr/Collections.astro
+++ b/src/components/fr/Collections.astro
@@ -4,32 +4,32 @@
 const collections = [
   {
     title: 'Bois Nobles',
-    description: 'Noyer, cerisier et chêne massif dans leur splendeur la plus pure. Des pièces qui transforment tout espace en cave privée.',
-    image: '/images/collections/madera-noble.png',
+    desc: 'Noyer, cerisier et chêne massif dans leur splendeur la plus pure. Des pièces qui transforment tout espace en cave privée.',
+    img: '/images/collections/madera-noble.png',
     link: '#'
   },
   {
     title: 'Acier et Verre',
-    description: 'La rencontre de la précision industrielle et de l\'artisanat. Lignes architecturales pour les espaces contemporains.',
-    image: '/images/collections/acero-cristal.png',
+    desc: 'La rencontre de la précision industrielle et de l\'artisanat. Lignes architecturales pour les espaces contemporains.',
+    img: '/images/collections/acero-cristal.png',
     link: '#'
   },
   {
     title: 'Sous Escalier',
-    description: 'Nous transformons les espaces inutilisés en caves sur mesure. L\'art de l\'intégration parfaite.',
-    image: '/images/collections/bajo-escalera.png',
+    desc: 'Nous transformons les espaces inutilisés en caves sur mesure. L\'art de l\'intégration parfaite.',
+    img: '/images/collections/bajo-escalera.png',
     link: '#'
   },
   {
     title: 'Sur Mesure',
-    description: 'Votre vision, notre artisanat. Des projets singuliers sans aucune limitation de design ou de capacité.',
-    image: '/images/collections/a-medida.png',
+    desc: 'Votre vision, notre artisanat. Des projets singuliers sans aucune limitation de design ou de capacité.',
+    img: '/images/collections/a-medida.png',
     link: '#'
   },
   {
     title: 'Cigares & Jambon',
-    description: 'Nos chambres avec contrôle exact de température et d\'humidité. Conditions parfaites pour la conservation.',
-    image: '/images/collections/puros-jamones.png',
+    desc: 'Nos chambres avec contrôle exact de température et d\'humidité. Conditions parfaites pour la conservation.',
+    img: '/images/collections/puros.png',
     link: '#'
   },
 ];
