--- a/src/components/fr/Navbar.astro
+++ b/src/components/fr/Navbar.astro
@@ -4,12 +4,13 @@
 <header class="fixed top-0 left-0 w-full z-40 mix-blend-difference" id="navbar">
   
   <!-- Logo -->
-  <a href="/fr" class="z-50 text-[var(--color-ivory)] group">
+  <a href="/fr" class="z-50 group">
     <div class="flex items-center gap-3 pl-6 md:pl-12 pt-8">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" class="w-6 h-6 opacity-70">
-        <path d="M8 2v4M16 2v4M12 6v16M8 6h8a4 4 0 014 4v0a4 4 0 01-4 4H8a4 4 0 01-4-4v0a4 4 0 014-4z"/>
-      </svg>
-      <span class="font-accent tracking-[0.3em] text-lg uppercase">Caveduke</span>
+      <img 
+        src="/images/logo-caveduke.png" 
+        alt="Caveduke Logo" 
+        class="h-10 w-auto brightness-0 invert opacity-90 group-hover:opacity-100 transition-opacity duration-300"
+      />
     </div>
   </a>
 
